# e2-puzzle-cpp-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: e2pieces_hard_10x10.txt  e2pieces_hard_9x9.txt  hints_4x4.txt
docs/: CHANGELOG.md
src/: parallel_solver.cpp  solution_storage.h  solver.cpp  solver_akos.cpp  solver_old.cpp  system_info.h
